--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,7 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<meta charset="UTF-8">
+	<title>Super Awesome</title>
 
+	<!-- CSS (load bootstrap from a CDN) -->
+	<link rel="stylesheet" href="/static/js/libs/bootstrap/dist/css/bootstrap.min.css">
+	<style>
+		body 	{ padding-top:50px; }
+	</style>
 </head>
 <body class="container">
 
@@ -13,6 +20,7 @@
 		<div class="jumbotron">
 			<h1>This is great</h1>
 			<p>Welcome to templating using EJS</p>
+			<a href="/result"></a>
 		</div>
 	</main>
 
