Added skeleton for index and results page

--- a/views/pages/results.ejs
+++ b/views/pages/results.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Home | Popularity Meter 2.0</title>
+	<title>Results | Popularity Meter 2.0</title>
 
 	<!-- CSS (load bootstrap from a CDN) -->
 	<link rel="stylesheet" href="/static/js/libs/bootstrap/dist/css/bootstrap.min.css">
@@ -18,9 +18,8 @@
 
 	<main>
 		<div class="jumbotron">
-			<h1>This is great</h1>
-			<p>Welcome to templating using EJS</p>
-			<a href="/results">"Login" with Facebook</a>
+			<h1>Your score is 60</h1>
+			<p>Or something...I don't know.</p>
 		</div>
 	</main>
 
