--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -20,7 +20,7 @@
 		<div class="jumbotron">
 			<h1>This is great</h1>
 			<p>Welcome to templating using EJS</p>
-			<a href="/results">"Login" with Facebook</a>
+			<a href="/auth">"Login" with Facebook</a>
 		</div>
 	</main>
 
