--- a/views/pages/results.ejs
+++ b/views/pages/results.ejs
@@ -20,6 +20,7 @@
 		<div class="jumbotron">
 			<h1>Your score is 60</h1>
 			<p>Or something...I don't know.</p>
+			<%= access_token %>
 		</div>
 	</main>
 
