All FB api calls and algorithm are now in place

--- a/views/pages/results.ejs
+++ b/views/pages/results.ejs
@@ -18,9 +18,8 @@
 
 	<main>
 		<div class="jumbotron">
-			<h1>Your score is 60</h1>
+			<h1>Your score is <%= pop %>%</h1>
 			<p>Or something...I don't know.</p>
-			<%= access_token %>
 		</div>
 	</main>
 
