Small style changes

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -17,7 +17,7 @@
 	</header>
 
 	<main>
-		<div class="jumbotron">
+		<div class="lead">
 			<h1>This is great</h1>
 			<p>Welcome to templating using EJS</p>
 			<a href="/auth">"Login" with Facebook</a>
