--- a/views/pages/results.ejs
+++ b/views/pages/results.ejs
@@ -17,8 +17,8 @@
 	</header>
 
 	<main>
-		<div class="jumbotron">
-			<h1>Your score is <%= pop %>%</h1>
+		<div class="lead">
+			<h1>Your score is <%= pop %>&#37;</h1>
 			<p>Or something...I don't know.</p>
 		</div>
 	</main>
