Added social buttons library for the 'login' link

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -6,6 +6,9 @@
 
 	<!-- CSS (load bootstrap from a CDN) -->
 	<link rel="stylesheet" href="/static/js/libs/bootstrap/dist/css/bootstrap.min.css">
+	<link rel="stylesheet" href="/static/js/libs/font-awesome/css/font-awesome.min.css">
+	<link rel="stylesheet" href="/static/js/libs/bootstrap-social/bootstrap-social.css">
+	
 	<style>
 		body 	{ padding-top:50px; }
 	</style>
@@ -20,7 +23,10 @@
 		<div class="lead">
 			<h1>This is great</h1>
 			<p>Welcome to templating using EJS</p>
-			<a href="/auth">"Login" with Facebook</a>
+			<a href="/auth" class="btn btn-block btn-social btn-facebook">
+				<i class="fa fa-facebook"></i>
+				Sign in with Facebook
+			</a>
 		</div>
 	</main>
 
