--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -9,31 +9,48 @@
 	<link rel="stylesheet" href="/static/js/libs/bootstrap/dist/css/bootstrap.min.css">
 	<link rel="stylesheet" href="/static/js/libs/font-awesome/css/font-awesome.min.css">
 	<link rel="stylesheet" href="/static/js/libs/bootstrap-social/bootstrap-social.css">
-	
-	<style>
-		body 	{ padding-top:50px; }
-	</style>
+	<link rel="stylesheet" href="/static/css/main.css">
 </head>
-<body class="container">
+<body>
 
-	<header>
-
-	</header>
-
-	<main>
-		<div class="lead">
-			<h1>This is great</h1>
-			<p>Welcome to templating using EJS</p>
+	<nav class="navbar  navbar-inverse navbar-fixed-top" role="navigation">
+	  <div class="container-fluid">
+	    <div class="navbar-header">
+	      <a class="navbar-brand" href="/">Popularity Meter 2.0</a>
+	    </div>
+	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+	     
+	      <ul class="nav navbar-nav navbar-right">
+	        <li><a href="/contact">Contact</a></li>
+	      </ul>
+	    </div>
+	  </div>
+	</nav>
+	<div class="jumbotron">
+		<div class="container">
+			<br />
+			<h1>Welcome to Popularity Meter 2.0</h1>
+			<p>Before we begin, you have to connect to Facebook by pressing the button below.</p>
 			<a href="/auth" class="btn btn-block btn-social btn-facebook">
 				<i class="fa fa-facebook"></i>
 				Sign in with Facebook
 			</a>
 		</div>
-	</main>
-
+	</div>
+	<hr />
 	<footer>
-
+	<div class="text-center">
+		 &copy; 2014
+	</div>
 	</footer>
-	
+	<script src="/static/js/libs/jquery/dist/jquery.min.js"></script>
+	<script type="text/javascript">
+		var _gaq = _gaq || [];
+		(function() {
+		  var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+		  ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+		  var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+		})();
+	</script>
 </body>
 </html>
