--- a/views/pages/results.ejs
+++ b/views/pages/results.ejs
@@ -7,28 +7,39 @@
 
 	<!-- CSS (load bootstrap from a CDN) -->
 	<link rel="stylesheet" href="/static/js/libs/bootstrap/dist/css/bootstrap.min.css">
-	<style>
-		body 	{ padding-top:50px; }
-	</style>
+	<link rel="stylesheet" href="/static/js/libs/font-awesome/css/font-awesome.min.css">
+	<link rel="stylesheet" href="/static/js/libs/bootstrap-social/bootstrap-social.css">
+	<link rel="stylesheet" href="/static/css/main.css">
 </head>
-<body class="container">
-
-	<header>
-
-	</header>
-
-	<main>
-		<div class="lead">
+<body>
+	<nav class="navbar  navbar-inverse navbar-fixed-top" role="navigation">
+	  <div class="container-fluid">
+	    <div class="navbar-header">
+	      <a class="navbar-brand" href="/">Popularity Meter 2.0</a>
+	    </div>
+	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+	     
+	      <ul class="nav navbar-nav navbar-right">
+	        <li><a href="/contact">Contact</a></li>
+	      </ul>
+	    </div>
+	  </div>
+	</nav>
+	<div class="jumbotron">
+		<div class="container">
 			<h3>Your score is <%= pop %>&#37;</hh3>
 			<h4><%=byline%></h4>
 			<a id="facebook-post" href="#">Post to Facebook?</a>
 			<img src="static/img/<%=image%>.png" height="100"/>
 			<h5><%=desc%></h5>
 		</div>
-	</main>
+	</div>
 
+	<hr />
 	<footer>
-
+	<div class="text-center">
+		 &copy; 2014
+	</div>
 	</footer>
 	<div id="fb-root"></div>
 	<script src="/static/js/libs/jquery/dist/jquery.min.js"></script>
@@ -55,12 +66,11 @@
  	</script>
 	<script type="text/javascript">
 		var _gaq = _gaq || [];
-		
 		(function() {
 		  var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
 		  ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
 		  var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
 		})();
-	</script> 
+	</script>
 </body>
 </html>
