Added code for js logger to the results page as well as log catcher on server

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -39,10 +39,11 @@
 	</div>
 	<hr />
 	<footer>
-	<div class="text-center">
-		 &copy; 2015
-	</div>
+		<div class="text-center">
+			 &copy; 2015
+		</div>
 	</footer>
+	<script src="/static/js/libs/log4javascript/log4javascript.js"></script>
 	<script src="/static/js/libs/jquery/dist/jquery.min.js"></script>
 	<script type="text/javascript">
 		var _gaq = _gaq || [];
